--- a/congress-management/src/main/resources/i18n/msgs_es.properties
+++ b/congress-management/src/main/resources/i18n/msgs_es.properties
@@ -1,57 +1,57 @@
-title1=Congress 
-title2=management 
-title3=
-login=Login
-password=Password
-authenticate=Authenticate
-register=Register
+title1=Gestión
+title2=de 
+title3=Congresos
+login=Usuario
+password=Congraseña
+authenticate=Acceder
+register=Registrarse
 error=Error
-loginFail=Your authentication has failed
-userDuplicated=Duplicated login
-userDuplicatedText=The user already exists in the DB, please choose another login
-back=Back
-enterPassword=Please enter password
-weak=weak
-good=good
-strong=strong
-homeHello=Hello
-homeDesc=, please navigate freely across the application using the menubar at the leftside.
-logout=Logout
-welcome=Welcome
-save=Save
-saved=Saved
-notSaved=Not saved
-savedText= Changes has been saved successfully
-savedTextNoCoords=Changes has been saved but coordinates could not be recorded
-notFound=Place not found
-notFoundText=has not found and it coordinates could not be completed, please try to specify it more accurately.
-found=Place found
-foundText= has been located, coordinates will be automatically stored.
-malformedUrlText= does not start with 'http://'
-malformedUrlSummary=Malformed Url
-emailIncorrect=You've entered an incorrect mail address
-openingAfterClosure=Closure before opening
-openingAfterClosureText=Closure date can't happen before the opening date
-success=Success
+loginFail=Tú autenticación ha fallado
+userDuplicated=Usuario duplicado
+userDuplicatedText=El usuario ya existe en la base de datos, por favor elige otro usuario
+back=Volver
+enterPassword=Por favor introduzca la contraseña
+weak=Débil
+good=Buena
+strong=Fuerte
+homeHello=Hola
+homeDesc=, por favor navega libremente por la aplicación usando el menú de la izquierda.
+logout=Salir
+welcome=Bienvenido
+save=Guardar
+saved=Guardado
+notSaved=No guardado
+savedText= Los cambios se han guardado correctamente
+savedTextNoCoords=Los cambios se han guardado pero las coordenadas no han podido recuperarse
+notFound=Lugar no encontrado
+notFoundText= no se ha encontrado y las coordenadas no han podido ser completadas, por favor intenta especificarlo de forma más precisa
+found=Lugar encontrado
+foundText= se ha encontrado, las coordenadas serán guardadas automáticamente
+malformedUrlText= no comienza por el prefijo 'http://'
+malformedUrlSummary=Dirección mal formada
+emailIncorrect=Dirección de correo incorrecta
+openingAfterClosure=Clausura antes de comienzo
+openingAfterClosureText=La fecha de clausura no puede ser anterior a la fecha de comienzo
+success=Correcto
 error=Error
-uploaded= has been correctly autouploaded
-participate=Participate
-participateText=A petition from yours has been sent to the organization
-participateSummary=Petition sent
-alreadyParticipateText=You've already sent a participation request
-alreadyParticipateSummary=Not delivered
-sendExposition=Send exposition
-expositionAttributes=Exposition attributes
-congressAttributes=Congress attributes
-congressDetail=Congress Detail
-expositionDetail=Exposition Detail
-map=View map
-download= Download
-sendToCongress=Send to congress
-autocompleteCongress=Congress search
-autocompleteExposition=Exposition search
-expositionSentOk=Exposition has sent to the Congress
-expositionSentFail=Could not sent the exposition to the congress, make sure you are selecting a resulting congress of autocomplete
-expositionSentAlready=The exposition was already sent before
-expositionInCongresses=Exposition sent to these congresses
-expositionsInCongress=Expositions sent to this congress
+uploaded= se ha subido y guardado correctamente
+participate=Participar
+participateText=Se ha enviado su petición a la organización
+participateSummary=Petición enviada
+alreadyParticipateText=Ya habías enviado una petición a la organización
+alreadyParticipateSummary=No enviada
+sendExposition=Enviar exposición
+expositionAttributes=Datos de la exposición
+congressAttributes=Datos del congreso
+congressDetail=Detalle del congreso
+expositionDetail=Detalle de la exposición
+map=Ver mapa
+download= Descargar
+sendToCongress=Enviar al congreso
+autocompleteCongress=Buscar congreso
+autocompleteExposition=Buscar exposición
+expositionSentOk=Se ha enviado la exposición al congreso
+expositionSentFail=No se pudo enviar la exposición al congreso, asegúrese de estar seleccionado un congreso del autocompletado
+expositionSentAlready=La exposición se ha enviado con anterioridad
+expositionInCongresses=Exposición enviada a estos congresos
+expositionsInCongress=Exposiciones enviadas a éste congreso
