--- a/congress-management/src/main/resources/i18n/msgs_en.properties
+++ b/congress-management/src/main/resources/i18n/msgs_en.properties
@@ -3,6 +3,8 @@ title2=management
 title3=
 login=Login
 password=Password
+menu=Menu
+links=Links
 authenticate=Authenticate
 register=Register
 error=Error
