--- a/congress-management/src/main/resources/i18n/msgs_es.properties
+++ b/congress-management/src/main/resources/i18n/msgs_es.properties
@@ -2,7 +2,9 @@ title1=Gestión
 title2=de 
 title3=Congresos
 login=Usuario
-password=Congraseña
+menu=Menú
+links=Enlaces
+password=Contraseña
 authenticate=Acceder
 register=Registrarse
 error=Error
